<resources>
    <string name="app_name">قصصي</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="agree">اوافق على الشروط والاحكام</string>
    <string name="state">حالة التسجيل</string>
    <string name="Home">الرئيسية</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">اضف العنوان هنا</string>
    <string name="subtitle">اضف العنوان الفرعي هنا</string>
    <string name="story">اكتب قصتك هنا</string>
    <string name="addstory">اضف القصة</string>
</resources>